--- a/src/components/search.module.css
+++ b/src/components/search.module.css
@@ -13,3 +13,13 @@
   font-size: 16px;
   color: #393e46;
 }
+
+.visuallyHidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 0;
+  width: 0;
+  padding: 0;
+  border: 0;
+}
